Fix overflow in navigation sidebar

--- a/console/frontend/src/main/frontend/src/app/components/pages/pages-navigation/pages-navigation.component.scss
+++ b/console/frontend/src/main/frontend/src/app/components/pages/pages-navigation/pages-navigation.component.scss
@@ -17,10 +17,9 @@
 
 li > a {
   cursor: pointer;
-}
-
-fa-icon + span {
-  margin-left: 6px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .fa-green {
